<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title">"SimpleCV"</string>
    <string name="slogan">"The Open Source Framework for Vision"</string>
    <string name="app_name">SimpleCV</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="choose_picture_button">Choose from Gallery</string>
    <string name="share_button">Share!</string>
    <string name="delete_button">Delete</string>
    <string name="go_button">Go!</string>
    <string name="clockwise_button">Clockwise</string>
    <string name="counterclockwise_button">Counterclockwise</string>
    <string name="spinner_prompt">Select a transformation...</string>
    <string-array name="transformations_array">
        <item>Invert</item>
        <item>Grab Edges</item>
        <item>Divide</item>
		<item>Dilate</item>
    </string-array>

</resources>